<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_vertical"
    android:layout_marginBottom="@dimen/margin_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/nama_surat"
            android:layout_width="@dimen/left_label_width"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_nama_surat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/asma"
                android:layout_width="@dimen/left_label_width"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_asma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/Ayat_ke"
            android:layout_width="@dimen/left_label_width"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_ayat_ke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/diturunkan_di"
                android:layout_width="@dimen/left_label_width"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_diturunkan_di"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">

             <TextView
                 android:text="@string/arti"
                 android:layout_width="@dimen/left_label_width"
                 android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/tv_arti"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>

         </LinearLayout>

    </LinearLayout>










